--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Test
-      run: tests/test-parts.sh
+      run: cd tests && ./test-parts.sh
 
   qa:
     runs-on: ubuntu-latest
@@ -47,7 +47,7 @@ jobs:
       run: pipenv install --dev
 
     - name: Lint with pylint
-      run: pylint -r n src/rdbunit/__main__.py
+      run: pipenv run pylint -r n src/rdbunit/__main__.py
 
     - name: Check style with pycodestyle
-      run: pycodestyle src/rdbunit/__main__.py
+      run: pipenv run pycodestyle src/rdbunit/__main__.py
